fix/style: remove horizontal scroll

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
   flex: 0 0 auto;
-  width: 100vw;
+  width: 100%;
   display: grid;
   grid-template-areas:
     'social useful'
